--- a/templates/default.hbs
+++ b/templates/default.hbs
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
 
     {{! Styles'n'Scripts }}
-    <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
+    {{!-- <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" /> --}}
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
 
     {{! Ghost outputs important style and meta data with this tag }}
@@ -26,6 +26,7 @@
     {{! Everything else gets inserted here }}
     {{{body}}}
 
+
     <footer class="site-footer clearfix">
          <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>
          <section class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a></section>
@@ -35,8 +36,9 @@
     {{ghost_foot}}
 
     {{! The main JavaScript file for Casper }}
+    <!--
     <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
-
+    -->
 </body>
 </html>
