--- a/templates/default.hbs
+++ b/templates/default.hbs
@@ -12,10 +12,11 @@
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
+    <link rel="shortcut icon" href="{{asset 'favicon.ico'}}">
 
     {{! Styles'n'Scripts }}
     {{!-- <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" /> --}}
+    <link rel="stylesheet" type="text/css" href="{{asset 'css/main.css'}}">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
 
     {{! Ghost outputs important style and meta data with this tag }}
@@ -36,7 +37,7 @@
     {{ghost_foot}}
 
     {{! The main JavaScript file for Casper }}
-    <!--
+    <!--!!!!!
     <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
     -->
